@@ -142,6 +142,23 @@ name|solrj
 operator|.
 name|request
 operator|.
+name|CollectionAdminRequest
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
 name|QueryRequest
 import|;
 end_import
@@ -1663,7 +1680,68 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|//fillExpectedWithCurrent();
-comment|// Now rebalance the leaders
+comment|// Now rebalance the leaders randomly using SolrJ or direct call
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+name|rebalanceLeaderUsingSolrJAPI
+argument_list|()
+expr_stmt|;
+else|else
+name|rebalanceLeaderUsingDirectCall
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|rebalanceLeaderUsingSolrJAPI
+specifier|private
+name|void
+name|rebalanceLeaderUsingSolrJAPI
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
+name|CollectionAdminRequest
+operator|.
+name|RebalanceLeaders
+name|rebalanceLeaders
+init|=
+name|CollectionAdminRequest
+operator|.
+name|rebalanceLeaders
+argument_list|(
+name|COLLECTION_NAME
+argument_list|)
+decl_stmt|;
+name|rebalanceLeaders
+operator|.
+name|setMaxAtOnce
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|rebalanceLeaderUsingDirectCall
+specifier|private
+name|void
+name|rebalanceLeaderUsingDirectCall
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
 name|ModifiableSolrParams
 name|params
 init|=
