@@ -2338,6 +2338,226 @@ name|this
 return|;
 block|}
 block|}
+comment|/*    * Returns a RebalanceLeaders object to rebalance leaders for a collection    */
+DECL|method|rebalanceLeaders
+specifier|public
+specifier|static
+name|RebalanceLeaders
+name|rebalanceLeaders
+parameter_list|(
+name|String
+name|collection
+parameter_list|)
+block|{
+return|return
+operator|new
+name|RebalanceLeaders
+argument_list|(
+name|collection
+argument_list|)
+return|;
+block|}
+DECL|class|RebalanceLeaders
+specifier|public
+specifier|static
+class|class
+name|RebalanceLeaders
+extends|extends
+name|AsyncCollectionAdminRequest
+block|{
+DECL|field|maxAtOnce
+specifier|protected
+name|Integer
+name|maxAtOnce
+decl_stmt|;
+DECL|field|maxWaitSeconds
+specifier|protected
+name|Integer
+name|maxWaitSeconds
+decl_stmt|;
+DECL|field|collection
+specifier|protected
+name|String
+name|collection
+decl_stmt|;
+DECL|method|setMaxAtOnce
+specifier|public
+name|RebalanceLeaders
+name|setMaxAtOnce
+parameter_list|(
+name|Integer
+name|maxAtOnce
+parameter_list|)
+block|{
+name|this
+operator|.
+name|maxAtOnce
+operator|=
+name|maxAtOnce
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+DECL|method|setMaxWaitSeconds
+specifier|public
+name|RebalanceLeaders
+name|setMaxWaitSeconds
+parameter_list|(
+name|Integer
+name|maxWaitSeconds
+parameter_list|)
+block|{
+name|this
+operator|.
+name|maxWaitSeconds
+operator|=
+name|maxWaitSeconds
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+DECL|method|getMaxAtOnce
+specifier|public
+name|Integer
+name|getMaxAtOnce
+parameter_list|()
+block|{
+return|return
+name|maxAtOnce
+return|;
+block|}
+DECL|method|getMaxWaitSeconds
+specifier|public
+name|Integer
+name|getMaxWaitSeconds
+parameter_list|()
+block|{
+return|return
+name|maxWaitSeconds
+return|;
+block|}
+DECL|method|RebalanceLeaders
+specifier|public
+name|RebalanceLeaders
+parameter_list|(
+name|String
+name|collection
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|CollectionAction
+operator|.
+name|REBALANCELEADERS
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|collection
+operator|=
+name|collection
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|setAsyncId
+specifier|public
+name|RebalanceLeaders
+name|setAsyncId
+parameter_list|(
+name|String
+name|id
+parameter_list|)
+block|{
+name|this
+operator|.
+name|asyncId
+operator|=
+name|id
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getParams
+specifier|public
+name|SolrParams
+name|getParams
+parameter_list|()
+block|{
+name|ModifiableSolrParams
+name|params
+init|=
+operator|(
+name|ModifiableSolrParams
+operator|)
+name|super
+operator|.
+name|getParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|COLLECTION
+argument_list|,
+name|collection
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|this
+operator|.
+name|maxWaitSeconds
+operator|!=
+literal|null
+condition|)
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"maxWaitSeconds"
+argument_list|,
+name|this
+operator|.
+name|maxWaitSeconds
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|this
+operator|.
+name|maxAtOnce
+operator|!=
+literal|null
+condition|)
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"maxAtOnce"
+argument_list|,
+name|this
+operator|.
+name|maxAtOnce
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|params
+return|;
+block|}
+block|}
 comment|/**    * Returns a SolrRequest to delete a collection    */
 DECL|method|deleteCollection
 specifier|public
